docker setup for flask app
