# packages/ml_api/api/spec/api.yaml
@@ -5,9 +5,11 @@ info:
   version: '1'
 
 servers:
-- url: http://0.0.0.0:5000/{version}
+- url: http://{base}:5000/{version}
   description: API for performing house price predictions.
   variables:
+    base:
+      default: 0.0.0.0
     version:
       enum:
         - v1
@@ -20,6 +22,13 @@ paths:
       responses:
         200:
           description: API Health Status
+
+  /version:
+    get:
+      operationId: api.controller.version
+      responses:
+        200:
+          description: API and Model Versions
 
   /predict:
     post:
@@ -43,85 +52,85 @@ components:
       type: object
       description: "List of the houses to get predictions for."
       example:
-        Id: 1461,
-        MSSubClass: 20,
-        MSZoning: RH,
-        LotFrontage: 80.0,
-        LotArea: 11622,
-        Street: Pave,
-        Alley: null,
-        LotShape: Reg,
-        LandContour: Lvl,
-        Utilities: AllPub,
-        LotConfig: Inside,
-        LandSlope: Gtl,
-        Neighborhood: NAmes,
-        Condition1: Feedr,
-        Condition2: Norm,
-        BldgType: 1Fam,
-        HouseStyle: 1Story,
-        OverallQual: 5,
-        OverallCond: 6,
-        YearBuilt: 1961,
-        YearRemodAdd: 1961,
-        RoofStyle: Gable,
-        RoofMatl: CompShg,
-        Exterior1st: VinylSd,
-        Exterior2nd: VinylSd,
-        MasVnrType: None,
-        MasVnrArea: 0.0,
-        ExterQual: TA,
-        ExterCond: TA,
-        Foundation: CBlock,
-        BsmtQual: TA,
-        BsmtCond: TA,
-        BsmtExposure: No,
-        BsmtFinType1: Rec,
-        BsmtFinSF1: 468.0,
-        BsmtFinType2: LwQ,
-        BsmtFinSF2: 144.0,
-        BsmtUnfSF: 270.0,
-        TotalBsmtSF: 882.0,
-        Heating: GasA,
-        HeatingQC: TA,
-        CentralAir: Y,
-        Electrical: SBrkr,
-        1stFlrSF: 896,
-        2ndFlrSF: 0,
-        LowQualFinSF: 0,
-        GrLivArea: 896,
-        BsmtFullBath: 0.0,
-        BsmtHalfBath: 0.0,
-        FullBath: 1,
-        HalfBath: 0,
-        BedroomAbvGr: 2,
-        KitchenAbvGr: 1,
-        KitchenQual: TA,
-        TotRmsAbvGrd: 5,
-        Functional: Typ,
-        Fireplaces: 0,
-        FireplaceQu: null,
-        GarageType: Attchd,
-        GarageYrBlt: 1961.0,
-        GarageFinish: Unf,
-        GarageCars: 1.0,
-        GarageArea: 730.0,
-        GarageQual: TA,
-        GarageCond: TA,
-        PavedDrive: Y,
-        WoodDeckSF: 140,
-        OpenPorchSF: 0,
-        EnclosedPorch: 0,
-        3SsnPorch: 0,
-        ScreenPorch: 120,
-        PoolArea: 0,
-        PoolQC: null,
-        Fence: MnPrv,
-        MiscFeature: null,
-        MiscVal: 0,
-        MoSold: 6,
-        YrSold: 2010,
-        SaleType: WD,
+        Id: 1461
+        MSSubClass: 20
+        MSZoning: RH
+        LotFrontage: 80.0
+        LotArea: 11622
+        Street: Pave
+        Alley: null
+        LotShape: Reg
+        LandContour: Lvl
+        Utilities: AllPub
+        LotConfig: Inside
+        LandSlope: Gtl
+        Neighborhood: NAmes
+        Condition1: Feedr
+        Condition2: Norm
+        BldgType: 1Fam
+        HouseStyle: 1Story
+        OverallQual: 5
+        OverallCond: 6
+        YearBuilt: 1961
+        YearRemodAdd: 1961
+        RoofStyle: Gable
+        RoofMatl: CompShg
+        Exterior1st: VinylSd
+        Exterior2nd: VinylSd
+        MasVnrType: None
+        MasVnrArea: 0.0
+        ExterQual: TA
+        ExterCond: TA
+        Foundation: CBlock
+        BsmtQual: TA
+        BsmtCond: TA
+        BsmtExposure: null
+        BsmtFinType1: Rec
+        BsmtFinSF1: 468.0
+        BsmtFinType2: LwQ
+        BsmtFinSF2: 144.0
+        BsmtUnfSF: 270.0
+        TotalBsmtSF: 882.0
+        Heating: GasA
+        HeatingQC: TA
+        CentralAir: Y
+        Electrical: SBrkr
+        1stFlrSF: 896
+        2ndFlrSF: 0
+        LowQualFinSF: 0
+        GrLivArea: 896
+        BsmtFullBath: 0.0
+        BsmtHalfBath: 0.0
+        FullBath: 1
+        HalfBath: 0
+        BedroomAbvGr: 2
+        KitchenAbvGr: 1
+        KitchenQual: TA
+        TotRmsAbvGrd: 5
+        Functional: Typ
+        Fireplaces: 0
+        FireplaceQu: null
+        GarageType: Attchd
+        GarageYrBlt: 1961.0
+        GarageFinish: Unf
+        GarageCars: 1.0
+        GarageArea: 730.0
+        GarageQual: TA
+        GarageCond: TA
+        PavedDrive: Y
+        WoodDeckSF: 140
+        OpenPorchSF: 0
+        EnclosedPorch: 0
+        3SsnPorch: 0
+        ScreenPorch: 120
+        PoolArea: 0
+        PoolQC: null
+        Fence: MnPrv
+        MiscFeature: null
+        MiscVal: 0
+        MoSold: 6
+        YrSold: 2010
+        SaleType: WD
         SaleCondition: Normal
 
     ClientError:
